DesafioPricing/force-app/main/default/objects/Tax__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para centro de distribuição.</description>
    <label>DistributionCenter</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Tax</relationshipLabel>
    <relationshipName>Tax</relationshipName>
    <type>Lookup</type>
</CustomField>