DesafioPricing/force-app/main/default/objects/Tax__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para Produto.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tax</relationshipLabel>
    <relationshipName>Tax</relationshipName>
    <type>Lookup</type>
</CustomField>