DesafioPricing/force-app/main/default/objects/Tax__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <description>Percentual de imposto sobre o custo.</description>
    <label>TaxRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>