DesafioPricing/force-app/main/default/objects/Tax__c/validationRules/Campos_Obrigatorios_Imposto.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Obrigatorios_Imposto</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK(Product__c),
ISBLANK(DistributionCenter__c),
ISBLANK(State__c)
)</errorConditionFormula>
    <errorMessage>Atenção! Para cadastrar um Imposto, você deve obrigatoriamente preencher o Produto, o Centro de Distribuição e o Estado de Destino.</errorMessage>
</ValidationRule>