DesafioPricing/force-app/main/default/objects/Tax__c/validationRules/Imposto_ativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Imposto_ativo</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Ativo&quot;) &amp;&amp; 
(ISCHANGED(Product__c) || ISCHANGED(ProductHierarchy__c) || ISCHANGED(TaxRate__c) || ISCHANGED(DistributionCenter__c) || ISCHANGED(State__c))</errorConditionFormula>
    <errorMessage>Este registro de Frete está Ativo e não permite edições. Para alterar o valor, mude o status para Rascunho ou crie um novo registro.</errorMessage>
</ValidationRule>