DesafioPricing/force-app/main/default/objects/Tax__c/validationRules/Produto_OU_Hierarquia.validationRule-meta.xml
<ValidationRule>
    <fullName>Produto_OU_Hierarquia</fullName>
    <active>true</active>
    <errorConditionFormula>( ISBLANK(Product__c) &amp;&amp; ISBLANK(ProductHierarchy__c) )
||
( NOT(ISBLANK(Product__c)) &amp;&amp; NOT(ISBLANK(ProductHierarchy__c)) )</errorConditionFormula>
    <errorMessage>Deve ser especificado OU um produto OU uma hierarquia de produtos. Não é possível deixar ambos vazios ou preencher os dois ao mesmo tempo.</errorMessage>
</ValidationRule>